# rit-utils

./: .dockerignore  .env.example  .env.examples  .gitignore  DEPLOYMENT.md  Dockerfile  QUICK_START.md  README.md  TESTING.md  debug-https.sh  debug_2fa.py  deploy.sh  docker-compose.production.yml  docker-compose.yml  fix-https-v2.sh  fix-https.sh  pyproject.toml  renew-cert.sh  run_tests.sh  setup-https.sh  test-locale-fix.sh  update.sh
.github/scripts/: deploy.sh
.github/workflows/: main.yml
backend/: main.py  schema.py
frontend/templates/: doctor_form.html  footer.html  gen_rit_cert.html  home.html  send_email.html  token-refresh.js
frontend/templates/css/: style_home.css  style_login.css  style_utils.css
nginx/: nginx.conf
nginx/conf.d/: rit-utils.conf  rit-utils.conf.template
nginx/ssl/: .gitkeep
src/: config.py  main.py
src/auth/: __init__.py  cookie_utils.py  login.py  routes.py  two_factor.py
src/utils/: __init__.py  email_handler.py  email_templates_examples.py
src/utils/doctor_form/: doctor_form_handler.py
src/utils/gen_cert/: gen_cert_handler.py
templates/: doctor_form.html  gen_rit_cert.html  home.html  login.html  remove_bg.html  send_email.html  setup_2fa.html  token-refresh.js  two_factor.html
templates/css/: style_home.css  style_login.css  style_utils.css
tests/: README.md  __init__.py  conftest.py  test_auth_cookie_utils.py  test_auth_login.py  test_auth_two_factor.py  test_config.py  test_integration_endpoints.py  test_main.py  test_utils_doctor_form.py  test_utils_email.py  test_utils_gen_cert.py  test_utils_remove_bg.py
(+3 files in other folders)
