[tool.poetry]
name = "rit-utils"
version = "0.1.0"
description = "Утилиты для помощи в работе"
authors = ["Maxim Subbotin <pro.shanti@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
authx = "^1.4.3"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
