[tool.poetry]
name = "rit-utils"
version = "0.1.0"
description = "Утилиты для помощи в работе"
authors = ["Maxim Subbotin <pro.shanti@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.1"
authx = "^1.4.3"
jinja2 = "^3.1.6"
pyotp = "^2.9.0"
qrcode = "^7.4.2"
Pillow = "^10.1.0"
types-qrcode = "^8.2.0.20250506"
python-pptx = "^0.6.23"

# System dependencies required (install separately):
# LibreOffice для конвертации PPTX в PDF
# Ubuntu/Debian: sudo apt-get install libreoffice
# CentOS/RHEL: sudo yum install libreoffice  
# macOS: brew install --cask libreoffice
# Windows: Download from https://www.libreoffice.org/

[tool.poetry.scripts]
check-deps = "scripts.check_dependencies:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
